<?xml version="1.0"?>
<package>
  <name>rtt_orca</name>
  <version>1.0.0</version>
  <description>The rtt_orca package</description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>
  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <run_depend>rtt</run_depend>
  <build_depend>orca</build_depend>
  <run_depend>orca</run_depend>

</package>
