<?xml version="1.0"?>
<package format="2">
  <name>rtt_orca</name>
  <version>1.0.0</version>
  <description>The rtt_orca package</description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>
  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>rtt_roscomm</depend>
  <depend>rtt_rosclock</depend>
  <depend>orca</depend>
  <depend>orca_ros</depend>

    <export>
        <rtt_ros>
            <plugin_depend>rtt_std_msgs</plugin_depend>
            <!-- <plugin_depend>rtt_diagnostic_msgs</plugin_depend> -->
            <plugin_depend>rtt_geometry_msgs</plugin_depend>
            <!-- <plugin_depend>rtt_sensor_msgs</plugin_depend> -->
            <!-- <plugin_depend>kdl_typekit</plugin_depend> -->
            <plugin_depend>eigen_typekit</plugin_depend>
            <plugin_depend>rtt_rosclock</plugin_depend>
            <!-- <plugin_depend>rtt_tf</plugin_depend> -->
            <plugin_depend>rtt_rosparam</plugin_depend>
            <plugin_depend>rtt_roscomm</plugin_depend>
            <plugin_depend>rtt_rospack</plugin_depend>
            <!-- <plugin_depend>rtt_nav_msgs</plugin_depend> -->
            <!-- <plugin_depend>rtt_trajectory_msgs</plugin_depend> -->
        </rtt_ros>
    </export>
</package>
